[tool.poetry]
name = "snmp-json"
version = "0.2.1"
description = "SNMP poller to JSON output"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysnmp-lextudio = "^6.3.0"
pydantic = "^2.10.6"
click = "^8.1.8"
pydantic-settings = "^2.8.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pytest = "^8.3.4"
mypy = "^1.15.0"
codespell = "^2.4.1"
pyflame = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"snmp-json" = "snmp_json.__main__:cli"
