[tool.poetry]
name = "snmp-json"
version = "0.2.1"
description = "SNMP poller to JSON output"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysnmp-lextudio = "^6.3.0"
pydantic = "^2.11.7"
click = "^8.2.1"
pydantic-settings = "^2.10.1"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
pytest = "^8.4.2"
mypy = "^1.17.1"
codespell = "^2.4.1"
pyflame = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"snmp-json" = "snmp_json.__main__:cli"
